[gd_scene load_steps=2 format=3 uid="uid://bakd4gkaxi1pd"]

[ext_resource type="Script" path="res://snake_game.gd" id="1_rmb2k"]

[node name="SnakeGame" type="Node2D"]
script = ExtResource("1_rmb2k")

[node name="StepTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="timeout" from="StepTimer" to="." method="_on_step_timer_timeout"]
